--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Text-Todo
 
+0.2.1  Sat Dec 27 19:39:17 PST 2014
+       Fixed RT Bug #101154 Thanks to svetoslav.chingov [...] gmail.com
+
 0.2.0  Mon Feb 15 18:06:02 2010
        Add the ability for an Entry to learn new tags instead of only in new()
        Make Todo.pm manage tags for the entries in its list
@@ -26,4 +29,4 @@ Revision history for Text-Todo
 0.0.1  Sun Jan 10 19:57:01 2010
        Initial release.
 
-$AFresh1: Changes,v 1.7 2010/02/16 01:13:12 andrew Exp $
+$AFresh1: Changes,v 1.6 2010/02/14 06:08:07 andrew Exp $
